@@ -27,7 +27,6 @@
 //#include <sys/modctl.h>
 //#include <sys/kobj.h>
 //#include <sys/kobj_impl.h>
-#include <sys/sysmacros.h>
 #include <elf.h>
 //#include <sys/task.h>
 
@@ -882,13 +881,15 @@ dt_module_update(dtrace_hdl_t *dtp, const char *name)
 	}
 
 	dmp->dm_flags |= DT_DM_KERNEL;
-	dmp->dm_modid = (int)OBJFS_MODID(st.st_ino);
+/*	dmp->dm_modid = (int)OBJFS_MODID(st.st_ino); */
 
 	if (dmp->dm_info.objfs_info_primary)
 		dmp->dm_flags |= DT_DM_PRIMARY;
 
-	dt_dprintf("opened %d-bit module %s (%s) [%d]\n",
-	    bits, dmp->dm_name, dmp->dm_file, dmp->dm_modid);
+/*	dt_dprintf("opened %d-bit module %s (%s) [%d]\n",
+	    bits, dmp->dm_name, dmp->dm_file, dmp->dm_modid); */
+	dt_dprintf("opened %d-bit module %s (%s)\n",
+	    bits, dmp->dm_name, dmp->dm_file);
 }
 
 /*
@@ -1252,7 +1253,7 @@ dt_module_info(const dt_module_t *dmp, dtrace_objinfo_t *dto)
 {
 	dto->dto_name = dmp->dm_name;
 	dto->dto_file = dmp->dm_file;
-	dto->dto_id = dmp->dm_modid;
+/*	dto->dto_id = dmp->dm_modid; */
 	dto->dto_flags = 0;
 
 	if (dmp->dm_flags & DT_DM_KERNEL)
