@@ -42,7 +42,6 @@
 #include <sys/types.h>
 #include <sys/stat.h>
 /*#include <sys/systeminfo.h>*/
-#include <sys/sysmacros.h>
 
 #include <types_boolean.h>
 #include <mutex.h>
