@@ -26,7 +26,6 @@
 /*#include <sys/stack.h>*/
 #include <sys/regset.h>
 /*#include <sys/frame.h>*/
-#include <sys/sysmacros.h>
 #include <sys/trap.h>
 #include <sys/machelf.h>
 
